src/ic-cdk-macros/tests/compile_fail/lifecycle_functions_only_once.stderr
error: [init] function already declared.
 --> tests/compile_fail/lifecycle_functions_only_once.rs:6:1
  |
6 | #[init]
  | ^^^^^^^
  |
  = note: this error originates in the attribute macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [pre_upgrade] function already declared.
  --> tests/compile_fail/lifecycle_functions_only_once.rs:12:1
   |
12 | #[pre_upgrade]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `pre_upgrade` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [post_upgrade] function already declared.
  --> tests/compile_fail/lifecycle_functions_only_once.rs:18:1
   |
18 | #[post_upgrade]
   | ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `post_upgrade` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [heartbeat] function already declared.
  --> tests/compile_fail/lifecycle_functions_only_once.rs:24:1
   |
24 | #[heartbeat]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `heartbeat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [inspect_message] function already declared.
  --> tests/compile_fail/lifecycle_functions_only_once.rs:30:1
   |
30 | #[inspect_message]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `inspect_message` (in Nightly builds, run with -Z macro-backtrace for more info)
